{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "GamePlay",
            "id": "eb40caa6-f35d-4b0f-b42d-8597af13926b",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "0fc2dc98-0da4-4200-abae-20d299a9b53a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "7c493351-d973-4f00-a51e-0e2e1bdffa0b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CameraLock",
                    "type": "Button",
                    "id": "50b5854b-cc2e-403a-9476-df1a799dbc5c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(pressPoint=0.1,behavior=2)"
                },
                {
                    "name": "NormalInteraction",
                    "type": "Button",
                    "id": "da605d2d-b5c0-46e7-9b74-a5e1a0223413",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(pressPoint=0.1)"
                },
                {
                    "name": "SpecialInteraction",
                    "type": "Button",
                    "id": "9ca2a8c8-188e-4879-b946-669d365f8b59",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(pressPoint=0.1)"
                },
                {
                    "name": "Interrupt",
                    "type": "Button",
                    "id": "08d31b66-d4c7-416e-966a-6cb44f0a9558",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(pressPoint=0.1)"
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "e41aa536-7a15-4aa5-819f-146865301763",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(pressPoint=0.1)"
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "23e4ef09-8b7b-4a6b-a9b9-63b7df1ac527",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold,Press(behavior=2)"
                },
                {
                    "name": "Dodge",
                    "type": "Button",
                    "id": "92eb3bbd-04f1-4ceb-8ac6-495c7d3ad0ff",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(pressPoint=0.1)"
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "6f0a65f1-9ba4-49e7-9b4b-d32711b1073d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(pressPoint=0.1)"
                },
                {
                    "name": "Lean",
                    "type": "Button",
                    "id": "b67b00ad-ec74-4933-a0b0-a18804310c4c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(pressPoint=0.1)"
                },
                {
                    "name": "Cover",
                    "type": "Button",
                    "id": "5d4fd136-dcb6-4d1a-92fa-98e7cdb5ed50",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(pressPoint=0.1,behavior=2)"
                },
                {
                    "name": "Craft",
                    "type": "Button",
                    "id": "88a13207-8980-4218-8f89-182c5fa4b59a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(pressPoint=0.1,behavior=2)"
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "84636690-2368-4aa4-99b0-dab46c8735a6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "dfcc1671-b013-4326-b3e8-3e6346d94889",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "e66f0e43-db18-44ff-8cb1-95998c427ba3",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "0a13d788-13b9-4613-aa3c-c7be3696638e",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "3d07499d-e13e-48c8-a1f7-0ba44cb7adf3",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "0a6df2ff-de77-4aee-8dd5-610102870a95",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "2f215745-110e-4558-92a9-18e5bf9076c1",
                    "path": "<DualShockGamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fb390a5f-1e68-43c2-9226-bd2c187841d5",
                    "path": "<DualShockGamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5fd0976a-b563-43a1-a65d-52ff99c87c94",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3402fee3-f9dd-44c0-a7b8-cbebb04fd659",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "CameraLock",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d5bc100e-51cb-4507-9143-67f4fa612772",
                    "path": "<DualShockGamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cb900a64-e4cd-489d-a910-352aa1d6e3be",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "457b5c68-d996-46d5-8d91-da0b5e6d52cf",
                    "path": "<DualShockGamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dodge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "09aaec7a-fbd8-4f69-b56f-60e4b6f52227",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dodge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f4514bd8-9ac9-4320-ad1c-45069574a172",
                    "path": "<DualShockGamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "120af7cc-27f6-4cfe-a4e4-4d6f2e7094ae",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "04791122-c4c8-4339-b015-2be932da4715",
                    "path": "<DualShockGamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Lean",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e80e5982-09c6-4b2e-8504-dcd1b48780ca",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Lean",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4ea1775e-57bd-49e7-b8a9-883bcfebddba",
                    "path": "<DualShockGamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cover",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "05b2a426-b48c-45cf-affa-3c1764d8b214",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cover",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "44e17d13-7ad7-4eb0-ba3d-db802f1bc720",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "NormalInteraction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b736f7cc-5696-4916-8591-70080c7a0f80",
                    "path": "<DualShockGamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "NormalInteraction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "23f05b8f-6a88-49dd-aa1f-8def03f78beb",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "Interrupt",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e7f2dea7-8376-4b14-818e-64a92ee881a0",
                    "path": "<DualShockGamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Interrupt",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "70c8ae7e-08fd-4172-a016-e019760689b4",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b73c341f-3438-4c4a-863f-af705caf6fa0",
                    "path": "<DualShockGamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5dd02402-ce93-42ad-b53c-b23951c6f460",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "SpecialInteraction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3657e291-bc68-408f-a1e9-87990a545264",
                    "path": "<DualShockGamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "SpecialInteraction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a6aae09a-43f7-4b04-b062-ea8cae6e3368",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "Craft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7d83c379-c62a-425f-9392-b209bc69df3f",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KeyboardAndMouse",
            "bindingGroup": "KeyboardAndMouse",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Controller",
            "bindingGroup": "Controller",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}